# charizhard-otp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci_charizhard_otp.yaml
src/: main.rs
src/mail/: utils.rs
src/parsing/: utils.rs
src/routes/: utils.rs
src/tls/: utils.rs
src/wireguard/: utils.rs
