[package]
name = "charizhard-otp"
version = "0.1.0"
edition = "2024"

[dependencies]
async-fs = "2.1.2"
hyper = {version = "1.6.0", features = ["server"]}
hyper-rustls = "0.27.5"
reqwest = { version = "0.11", features = ["rustls-tls"] }
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.2"
urlencoding = "2.1.3"
openssl = { version = "0.10", features = ["vendored"] }
curve25519-dalek = "4.1.3"
rand = "0.9.0"
base64 = "0.22.1"
wireguard-keys = "0.1.1"
rsa = "0.9.8"
console-subscriber = "0.1"
lazy_static = "1.5.0"
