[package]
name = "charizhard-otp"
version = "0.1.0"
edition = "2024"

[dependencies]
async-fs = "2.1"
hyper = {version = "1.6", features = ["server"]}
hyper-rustls = "0.27"
reqwest = { version = "0.12", features = ["rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["tls12"] }
rustls-pemfile = "2.2"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-rustls = "0.26"
urlencoding = "2.1"
openssl = { version = "0.10", features = ["vendored"] }
curve25519-dalek = "4.1"
rand = "0.9"
base64 = "0.22"
wireguard-keys = "0.1"
console-subscriber = "0.4"
lazy_static = "1.5"
